# multicool

./: Cargo.toml  LICENSE-MIT  README.md
benches/: bezier_subdiv.rs  root_finding.rs  sub_polys.rs  surface_eval.rs
src/: bezier_surface.rs  binomial.rs  bounding_box.rs  gridex.rs  lib.rs  monomial.rs  multivar_poly.rs  multivar_poly_system.rs  test_utils.rs  vector_promoted.rs
src/multivar_poly_system/: refinement.rs
src/multivar_poly_system/refinement/: hyperplanes.rs  hyperplanes_lp.rs  projected_polyhedra.rs
