[package]
name = "multicool"
version = "0.1.0"
edition = "2024"
authors = ["Kit Ham"]
description = "Root finding for multivariate polynomial systems using the Projected Polyhedral method and a modified hyperplane linear programming method."
license = "MIT OR Apache-2.0"
keywords = [
    "polynomial",
    "system",
    "root",
    "root-finding",
    "bezier",
    "computational-geometry",
    "monomial",
    "multivariate",
    "CAM",
    "CAD",
    "numerical-methods",
]
categories = ["science", "algorithms", "mathematics", "data-structures"]

[[bench]]
name = "sub_polys"
harness = false

[[bench]]
name = "bezier_subdiv"
harness = false

[[bench]]
name = "root_finding"
harness = false

[[bench]]
name = "surface_eval"
harness = false

[dependencies]
arrayvec = "0.7.6"
fmtastic = "0.2.1"
itertools = "0.14.0"
log = "0.4.29"
nalgebra = "0.34.1"
num-traits = "0.2.19"
smallvec = "1.15.1"
snafu = "0.8.9"

[dev-dependencies]
anstyle = "1.0.13"
approx = "0.5.1"
assertables = "9.8.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
env_logger = "0.11.8"
pretty_assertions = "1.4.1"
rand = "0.9.2"
